# receipt-rust

./: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/V1_create_receipt/: down.sql  up.sql
migrations/V2_create_receipt_item/: down.sql  up.sql
src/: api_error.rs  db.rs  main.rs  schema.rs
src/core/api/: api_documentation.rs  api_error.rs
src/core/database/: schema.rs
src/receipt/: controller.rs  mapper.rs  mod.rs  model.rs  receipt.rs  receipt_view.rs  routes.rs
src/receipt_item/: controller.rs  mapper.rs  mod.rs  model.rs  receipt_item.rs  receipt_item_create_order.rs  receipt_item_update_order.rs  receipt_item_view.rs  routes.rs
