[package]
name = "receipt-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Receipt project build in Rust"
readme = "README.md"

[dependencies]
actix-web = "4.5.0"
bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "uuid", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["serde", "v4"] }