[package]
name = "receipt-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Receipt project build in Rust"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["chrono", "numeric", "postgres", "uuid"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
rust_decimal = { version = "1.34.2", features = ["db-diesel2-postgres"] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono", "decimal", "uuid"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }